Modifique el 2 con counter

--- a/ejercicio2.ipynb
+++ b/ejercicio2.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "from collections import Counter\n",
     "\n",
     "text= \"\"\"NumPy is the fundamental package for scientific computing with Python.\n",
     "\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,6 +115,231 @@
      "text": [
       "numpy 9\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'': 16,\n",
+       "         'to': 13,\n",
+       "         'and': 12,\n",
+       "         'the': 10,\n",
+       "         'a': 10,\n",
+       "         'numpy': 9,\n",
+       "         'for': 7,\n",
+       "         'on': 7,\n",
+       "         'code': 6,\n",
+       "         'of': 6,\n",
+       "         'our': 6,\n",
+       "         'are': 6,\n",
+       "         'you': 6,\n",
+       "         'with': 5,\n",
+       "         'or': 5,\n",
+       "         'is': 4,\n",
+       "         'website': 4,\n",
+       "         'mailing': 4,\n",
+       "         'list': 4,\n",
+       "         'source': 4,\n",
+       "         'can': 4,\n",
+       "         'open': 4,\n",
+       "         'community': 4,\n",
+       "         'if': 4,\n",
+       "         'new': 4,\n",
+       "         'how': 3,\n",
+       "         'in': 3,\n",
+       "         'us': 3,\n",
+       "         'help': 3,\n",
+       "         'python': 2,\n",
+       "         'contributing': 2,\n",
+       "         'conduct': 2,\n",
+       "         'project': 2,\n",
+       "         'by': 2,\n",
+       "         'contributors': 2,\n",
+       "         'an': 2,\n",
+       "         'please': 2,\n",
+       "         'way': 2,\n",
+       "         'that': 2,\n",
+       "         'call': 2,\n",
+       "         'contributions': 2,\n",
+       "         'your': 2,\n",
+       "         'contact': 2,\n",
+       "         'first': 2,\n",
+       "         'contribute': 2,\n",
+       "         'also': 2,\n",
+       "         'develop': 2,\n",
+       "         'other': 2,\n",
+       "         'materials': 2,\n",
+       "         'issue': 2,\n",
+       "         'numpy-team@googlegroupscom': 2,\n",
+       "         'fundamental': 1,\n",
+       "         'package': 1,\n",
+       "         'scientific': 1,\n",
+       "         'computing': 1,\n",
+       "         'httpswwwnumpyorg': 1,\n",
+       "         'documentation': 1,\n",
+       "         'httpsnumpyorgdoc': 1,\n",
+       "         'httpsmailpythonorgmailmanlistinfonumpy-discussion': 1,\n",
+       "         'httpsgithubcomnumpynumpy': 1,\n",
+       "         'httpswwwnumpyorgdevdocsdevindexhtml': 1,\n",
+       "         'bug': 1,\n",
+       "         'reports': 1,\n",
+       "         'httpsgithubcomnumpynumpyissues': 1,\n",
+       "         'report': 1,\n",
+       "         'security': 1,\n",
+       "         'vulnerability': 1,\n",
+       "         'httpstideliftcomdocssecurity': 1,\n",
+       "         'it': 1,\n",
+       "         'provides': 1,\n",
+       "         'powerful': 1,\n",
+       "         'n-dimensional': 1,\n",
+       "         'array': 1,\n",
+       "         'object': 1,\n",
+       "         'sophisticated': 1,\n",
+       "         '(broadcasting)': 1,\n",
+       "         'functions': 1,\n",
+       "         'tools': 1,\n",
+       "         'integrating': 1,\n",
+       "         'cc++': 1,\n",
+       "         'fortran': 1,\n",
+       "         'useful': 1,\n",
+       "         'linear': 1,\n",
+       "         'algebra': 1,\n",
+       "         'fourier': 1,\n",
+       "         'transform': 1,\n",
+       "         'random': 1,\n",
+       "         'number': 1,\n",
+       "         'capabilities': 1,\n",
+       "         'testing': 1,\n",
+       "         'requires': 1,\n",
+       "         'pytest': 1,\n",
+       "         'hypothesis': 1,\n",
+       "         'tests': 1,\n",
+       "         'then': 1,\n",
+       "         'be': 1,\n",
+       "         'run': 1,\n",
+       "         'after': 1,\n",
+       "         'installation': 1,\n",
+       "         '-c': 1,\n",
+       "         '\"import': 1,\n",
+       "         'sys': 1,\n",
+       "         'sysexit(numpytest()': 1,\n",
+       "         'false)\"': 1,\n",
+       "         'community-driven': 1,\n",
+       "         'developed': 1,\n",
+       "         'diverse': 1,\n",
+       "         'group': 1,\n",
+       "         'leadership': 1,\n",
+       "         'has': 1,\n",
+       "         'made': 1,\n",
+       "         'strong': 1,\n",
+       "         'commitment': 1,\n",
+       "         'creating': 1,\n",
+       "         'inclusive': 1,\n",
+       "         'positive': 1,\n",
+       "         'read': 1,\n",
+       "         'guidance': 1,\n",
+       "         'interact': 1,\n",
+       "         'others': 1,\n",
+       "         'makes': 1,\n",
+       "         'thrive': 1,\n",
+       "         'welcomes': 1,\n",
+       "         'expertise': 1,\n",
+       "         'enthusiasm!': 1,\n",
+       "         'small': 1,\n",
+       "         'improvements': 1,\n",
+       "         'fixes': 1,\n",
+       "         'always': 1,\n",
+       "         'appreciated': 1,\n",
+       "         'considering': 1,\n",
+       "         'larger': 1,\n",
+       "         'through': 1,\n",
+       "         'writing': 1,\n",
+       "         'isn’t': 1,\n",
+       "         'only': 1,\n",
+       "         'review': 1,\n",
+       "         'pull': 1,\n",
+       "         'requests': 1,\n",
+       "         'stay': 1,\n",
+       "         'top': 1,\n",
+       "         'old': 1,\n",
+       "         'issues': 1,\n",
+       "         'tutorials': 1,\n",
+       "         'presentations': 1,\n",
+       "         'educational': 1,\n",
+       "         'maintain': 1,\n",
+       "         'improve': 1,\n",
+       "         'graphic': 1,\n",
+       "         'design': 1,\n",
+       "         'brand': 1,\n",
+       "         'assets': 1,\n",
+       "         'promotional': 1,\n",
+       "         'translate': 1,\n",
+       "         'content': 1,\n",
+       "         'outreach': 1,\n",
+       "         'onboard': 1,\n",
+       "         'write': 1,\n",
+       "         'grant': 1,\n",
+       "         'proposals': 1,\n",
+       "         'fundraising': 1,\n",
+       "         'efforts': 1,\n",
+       "         'more': 1,\n",
+       "         'information': 1,\n",
+       "         'about': 1,\n",
+       "         'ways': 1,\n",
+       "         'visit': 1,\n",
+       "         'you’re': 1,\n",
+       "         'unsure': 1,\n",
+       "         'where': 1,\n",
+       "         'start': 1,\n",
+       "         'skills': 1,\n",
+       "         'fit': 1,\n",
+       "         'reach': 1,\n",
+       "         'out!': 1,\n",
+       "         'ask': 1,\n",
+       "         'here': 1,\n",
+       "         'github': 1,\n",
+       "         'opening': 1,\n",
+       "         'leaving': 1,\n",
+       "         'comment': 1,\n",
+       "         'relevant': 1,\n",
+       "         'already': 1,\n",
+       "         'preferred': 1,\n",
+       "         'channels': 1,\n",
+       "         'communication': 1,\n",
+       "         'all': 1,\n",
+       "         'public': 1,\n",
+       "         'but': 1,\n",
+       "         'you’d': 1,\n",
+       "         'like': 1,\n",
+       "         'speak': 1,\n",
+       "         'private': 1,\n",
+       "         'coordinators': 1,\n",
+       "         'at': 1,\n",
+       "         'slack': 1,\n",
+       "         '(write': 1,\n",
+       "         'invitation)': 1,\n",
+       "         'we': 1,\n",
+       "         'have': 1,\n",
+       "         'biweekly': 1,\n",
+       "         'details': 1,\n",
+       "         'which': 1,\n",
+       "         'announced': 1,\n",
+       "         'very': 1,\n",
+       "         'welcome': 1,\n",
+       "         'join': 1,\n",
+       "         'this': 1,\n",
+       "         'guide': 1,\n",
+       "         'helps': 1,\n",
+       "         'explain': 1,\n",
+       "         'why': 1,\n",
+       "         'what': 1,\n",
+       "         'successfully': 1,\n",
+       "         'get': 1,\n",
+       "         'involved': 1})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -131,7 +356,8 @@
     "        word_max_appearences = word\n",
     "\n",
     "print(word_max_appearences,max_appears)\n",
-    "    "
+    "\n",
+    "Counter(words)    "
    ]
   }
  ],
