Modifique para usar el Counter,aunque no lo entiendo muy bien, podria preguntar la proxima clase

--- a/ejercicio2.ipynb
+++ b/ejercicio2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -106,240 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numpy 9\n"
+      "numpy 9\n",
+      "Counter({'': 16, 'to': 13, 'and': 12, 'the': 10, 'a': 10, 'numpy': 9, 'for': 7, 'on': 7, 'code': 6, 'of': 6, 'our': 6, 'are': 6, 'you': 6, 'with': 5, 'or': 5, 'is': 4, 'website': 4, 'mailing': 4, 'list': 4, 'source': 4, 'can': 4, 'open': 4, 'community': 4, 'if': 4, 'new': 4, 'how': 3, 'in': 3, 'us': 3, 'help': 3, 'python': 2, 'contributing': 2, 'conduct': 2, 'project': 2, 'by': 2, 'contributors': 2, 'an': 2, 'please': 2, 'way': 2, 'that': 2, 'call': 2, 'contributions': 2, 'your': 2, 'contact': 2, 'first': 2, 'contribute': 2, 'also': 2, 'develop': 2, 'other': 2, 'materials': 2, 'issue': 2, 'numpy-team@googlegroupscom': 2, 'fundamental': 1, 'package': 1, 'scientific': 1, 'computing': 1, 'httpswwwnumpyorg': 1, 'documentation': 1, 'httpsnumpyorgdoc': 1, 'httpsmailpythonorgmailmanlistinfonumpy-discussion': 1, 'httpsgithubcomnumpynumpy': 1, 'httpswwwnumpyorgdevdocsdevindexhtml': 1, 'bug': 1, 'reports': 1, 'httpsgithubcomnumpynumpyissues': 1, 'report': 1, 'security': 1, 'vulnerability': 1, 'httpstideliftcomdocssecurity': 1, 'it': 1, 'provides': 1, 'powerful': 1, 'n-dimensional': 1, 'array': 1, 'object': 1, 'sophisticated': 1, '(broadcasting)': 1, 'functions': 1, 'tools': 1, 'integrating': 1, 'cc++': 1, 'fortran': 1, 'useful': 1, 'linear': 1, 'algebra': 1, 'fourier': 1, 'transform': 1, 'random': 1, 'number': 1, 'capabilities': 1, 'testing': 1, 'requires': 1, 'pytest': 1, 'hypothesis': 1, 'tests': 1, 'then': 1, 'be': 1, 'run': 1, 'after': 1, 'installation': 1, '-c': 1, '\"import': 1, 'sys': 1, 'sysexit(numpytest()': 1, 'false)\"': 1, 'community-driven': 1, 'developed': 1, 'diverse': 1, 'group': 1, 'leadership': 1, 'has': 1, 'made': 1, 'strong': 1, 'commitment': 1, 'creating': 1, 'inclusive': 1, 'positive': 1, 'read': 1, 'guidance': 1, 'interact': 1, 'others': 1, 'makes': 1, 'thrive': 1, 'welcomes': 1, 'expertise': 1, 'enthusiasm!': 1, 'small': 1, 'improvements': 1, 'fixes': 1, 'always': 1, 'appreciated': 1, 'considering': 1, 'larger': 1, 'through': 1, 'writing': 1, 'isn’t': 1, 'only': 1, 'review': 1, 'pull': 1, 'requests': 1, 'stay': 1, 'top': 1, 'old': 1, 'issues': 1, 'tutorials': 1, 'presentations': 1, 'educational': 1, 'maintain': 1, 'improve': 1, 'graphic': 1, 'design': 1, 'brand': 1, 'assets': 1, 'promotional': 1, 'translate': 1, 'content': 1, 'outreach': 1, 'onboard': 1, 'write': 1, 'grant': 1, 'proposals': 1, 'fundraising': 1, 'efforts': 1, 'more': 1, 'information': 1, 'about': 1, 'ways': 1, 'visit': 1, 'you’re': 1, 'unsure': 1, 'where': 1, 'start': 1, 'skills': 1, 'fit': 1, 'reach': 1, 'out!': 1, 'ask': 1, 'here': 1, 'github': 1, 'opening': 1, 'leaving': 1, 'comment': 1, 'relevant': 1, 'already': 1, 'preferred': 1, 'channels': 1, 'communication': 1, 'all': 1, 'public': 1, 'but': 1, 'you’d': 1, 'like': 1, 'speak': 1, 'private': 1, 'coordinators': 1, 'at': 1, 'slack': 1, '(write': 1, 'invitation)': 1, 'we': 1, 'have': 1, 'biweekly': 1, 'details': 1, 'which': 1, 'announced': 1, 'very': 1, 'welcome': 1, 'join': 1, 'this': 1, 'guide': 1, 'helps': 1, 'explain': 1, 'why': 1, 'what': 1, 'successfully': 1, 'get': 1, 'involved': 1})\n",
+      "dict_items([('numpy', 9), ('is', 4), ('the', 10), ('fundamental', 1), ('package', 1), ('for', 7), ('scientific', 1), ('computing', 1), ('with', 5), ('python', 2), ('', 16), ('website', 4), ('httpswwwnumpyorg', 1), ('documentation', 1), ('httpsnumpyorgdoc', 1), ('mailing', 4), ('list', 4), ('httpsmailpythonorgmailmanlistinfonumpy-discussion', 1), ('source', 4), ('code', 6), ('httpsgithubcomnumpynumpy', 1), ('contributing', 2), ('httpswwwnumpyorgdevdocsdevindexhtml', 1), ('bug', 1), ('reports', 1), ('httpsgithubcomnumpynumpyissues', 1), ('report', 1), ('a', 10), ('security', 1), ('vulnerability', 1), ('httpstideliftcomdocssecurity', 1), ('it', 1), ('provides', 1), ('powerful', 1), ('n-dimensional', 1), ('array', 1), ('object', 1), ('sophisticated', 1), ('(broadcasting)', 1), ('functions', 1), ('tools', 1), ('integrating', 1), ('cc++', 1), ('and', 12), ('fortran', 1), ('useful', 1), ('linear', 1), ('algebra', 1), ('fourier', 1), ('transform', 1), ('random', 1), ('number', 1), ('capabilities', 1), ('testing', 1), ('requires', 1), ('pytest', 1), ('hypothesis', 1), ('tests', 1), ('can', 4), ('then', 1), ('be', 1), ('run', 1), ('after', 1), ('installation', 1), ('-c', 1), ('\"import', 1), ('sys', 1), ('sysexit(numpytest()', 1), ('false)\"', 1), ('of', 6), ('conduct', 2), ('community-driven', 1), ('open', 4), ('project', 2), ('developed', 1), ('by', 2), ('diverse', 1), ('group', 1), ('contributors', 2), ('leadership', 1), ('has', 1), ('made', 1), ('strong', 1), ('commitment', 1), ('to', 13), ('creating', 1), ('an', 2), ('inclusive', 1), ('positive', 1), ('community', 4), ('please', 2), ('read', 1), ('guidance', 1), ('on', 7), ('how', 3), ('interact', 1), ('others', 1), ('in', 3), ('way', 2), ('that', 2), ('makes', 1), ('our', 6), ('thrive', 1), ('call', 2), ('contributions', 2), ('welcomes', 1), ('your', 2), ('expertise', 1), ('enthusiasm!', 1), ('small', 1), ('improvements', 1), ('or', 5), ('fixes', 1), ('are', 6), ('always', 1), ('appreciated', 1), ('if', 4), ('you', 6), ('considering', 1), ('larger', 1), ('contact', 2), ('us', 3), ('through', 1), ('first', 2), ('writing', 1), ('isn’t', 1), ('only', 1), ('contribute', 2), ('also', 2), ('review', 1), ('pull', 1), ('requests', 1), ('help', 3), ('stay', 1), ('top', 1), ('new', 4), ('old', 1), ('issues', 1), ('develop', 2), ('tutorials', 1), ('presentations', 1), ('other', 2), ('educational', 1), ('materials', 2), ('maintain', 1), ('improve', 1), ('graphic', 1), ('design', 1), ('brand', 1), ('assets', 1), ('promotional', 1), ('translate', 1), ('content', 1), ('outreach', 1), ('onboard', 1), ('write', 1), ('grant', 1), ('proposals', 1), ('fundraising', 1), ('efforts', 1), ('more', 1), ('information', 1), ('about', 1), ('ways', 1), ('visit', 1), ('you’re', 1), ('unsure', 1), ('where', 1), ('start', 1), ('skills', 1), ('fit', 1), ('reach', 1), ('out!', 1), ('ask', 1), ('here', 1), ('github', 1), ('opening', 1), ('issue', 2), ('leaving', 1), ('comment', 1), ('relevant', 1), ('already', 1), ('preferred', 1), ('channels', 1), ('communication', 1), ('all', 1), ('public', 1), ('but', 1), ('you’d', 1), ('like', 1), ('speak', 1), ('private', 1), ('coordinators', 1), ('at', 1), ('numpy-team@googlegroupscom', 2), ('slack', 1), ('(write', 1), ('invitation)', 1), ('we', 1), ('have', 1), ('biweekly', 1), ('details', 1), ('which', 1), ('announced', 1), ('very', 1), ('welcome', 1), ('join', 1), ('this', 1), ('guide', 1), ('helps', 1), ('explain', 1), ('why', 1), ('what', 1), ('successfully', 1), ('get', 1), ('involved', 1)])\n",
+      "La palabra con mas apariciones es : numpy con 9 apariciones\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'': 16,\n",
-       "         'to': 13,\n",
-       "         'and': 12,\n",
-       "         'the': 10,\n",
-       "         'a': 10,\n",
-       "         'numpy': 9,\n",
-       "         'for': 7,\n",
-       "         'on': 7,\n",
-       "         'code': 6,\n",
-       "         'of': 6,\n",
-       "         'our': 6,\n",
-       "         'are': 6,\n",
-       "         'you': 6,\n",
-       "         'with': 5,\n",
-       "         'or': 5,\n",
-       "         'is': 4,\n",
-       "         'website': 4,\n",
-       "         'mailing': 4,\n",
-       "         'list': 4,\n",
-       "         'source': 4,\n",
-       "         'can': 4,\n",
-       "         'open': 4,\n",
-       "         'community': 4,\n",
-       "         'if': 4,\n",
-       "         'new': 4,\n",
-       "         'how': 3,\n",
-       "         'in': 3,\n",
-       "         'us': 3,\n",
-       "         'help': 3,\n",
-       "         'python': 2,\n",
-       "         'contributing': 2,\n",
-       "         'conduct': 2,\n",
-       "         'project': 2,\n",
-       "         'by': 2,\n",
-       "         'contributors': 2,\n",
-       "         'an': 2,\n",
-       "         'please': 2,\n",
-       "         'way': 2,\n",
-       "         'that': 2,\n",
-       "         'call': 2,\n",
-       "         'contributions': 2,\n",
-       "         'your': 2,\n",
-       "         'contact': 2,\n",
-       "         'first': 2,\n",
-       "         'contribute': 2,\n",
-       "         'also': 2,\n",
-       "         'develop': 2,\n",
-       "         'other': 2,\n",
-       "         'materials': 2,\n",
-       "         'issue': 2,\n",
-       "         'numpy-team@googlegroupscom': 2,\n",
-       "         'fundamental': 1,\n",
-       "         'package': 1,\n",
-       "         'scientific': 1,\n",
-       "         'computing': 1,\n",
-       "         'httpswwwnumpyorg': 1,\n",
-       "         'documentation': 1,\n",
-       "         'httpsnumpyorgdoc': 1,\n",
-       "         'httpsmailpythonorgmailmanlistinfonumpy-discussion': 1,\n",
-       "         'httpsgithubcomnumpynumpy': 1,\n",
-       "         'httpswwwnumpyorgdevdocsdevindexhtml': 1,\n",
-       "         'bug': 1,\n",
-       "         'reports': 1,\n",
-       "         'httpsgithubcomnumpynumpyissues': 1,\n",
-       "         'report': 1,\n",
-       "         'security': 1,\n",
-       "         'vulnerability': 1,\n",
-       "         'httpstideliftcomdocssecurity': 1,\n",
-       "         'it': 1,\n",
-       "         'provides': 1,\n",
-       "         'powerful': 1,\n",
-       "         'n-dimensional': 1,\n",
-       "         'array': 1,\n",
-       "         'object': 1,\n",
-       "         'sophisticated': 1,\n",
-       "         '(broadcasting)': 1,\n",
-       "         'functions': 1,\n",
-       "         'tools': 1,\n",
-       "         'integrating': 1,\n",
-       "         'cc++': 1,\n",
-       "         'fortran': 1,\n",
-       "         'useful': 1,\n",
-       "         'linear': 1,\n",
-       "         'algebra': 1,\n",
-       "         'fourier': 1,\n",
-       "         'transform': 1,\n",
-       "         'random': 1,\n",
-       "         'number': 1,\n",
-       "         'capabilities': 1,\n",
-       "         'testing': 1,\n",
-       "         'requires': 1,\n",
-       "         'pytest': 1,\n",
-       "         'hypothesis': 1,\n",
-       "         'tests': 1,\n",
-       "         'then': 1,\n",
-       "         'be': 1,\n",
-       "         'run': 1,\n",
-       "         'after': 1,\n",
-       "         'installation': 1,\n",
-       "         '-c': 1,\n",
-       "         '\"import': 1,\n",
-       "         'sys': 1,\n",
-       "         'sysexit(numpytest()': 1,\n",
-       "         'false)\"': 1,\n",
-       "         'community-driven': 1,\n",
-       "         'developed': 1,\n",
-       "         'diverse': 1,\n",
-       "         'group': 1,\n",
-       "         'leadership': 1,\n",
-       "         'has': 1,\n",
-       "         'made': 1,\n",
-       "         'strong': 1,\n",
-       "         'commitment': 1,\n",
-       "         'creating': 1,\n",
-       "         'inclusive': 1,\n",
-       "         'positive': 1,\n",
-       "         'read': 1,\n",
-       "         'guidance': 1,\n",
-       "         'interact': 1,\n",
-       "         'others': 1,\n",
-       "         'makes': 1,\n",
-       "         'thrive': 1,\n",
-       "         'welcomes': 1,\n",
-       "         'expertise': 1,\n",
-       "         'enthusiasm!': 1,\n",
-       "         'small': 1,\n",
-       "         'improvements': 1,\n",
-       "         'fixes': 1,\n",
-       "         'always': 1,\n",
-       "         'appreciated': 1,\n",
-       "         'considering': 1,\n",
-       "         'larger': 1,\n",
-       "         'through': 1,\n",
-       "         'writing': 1,\n",
-       "         'isn’t': 1,\n",
-       "         'only': 1,\n",
-       "         'review': 1,\n",
-       "         'pull': 1,\n",
-       "         'requests': 1,\n",
-       "         'stay': 1,\n",
-       "         'top': 1,\n",
-       "         'old': 1,\n",
-       "         'issues': 1,\n",
-       "         'tutorials': 1,\n",
-       "         'presentations': 1,\n",
-       "         'educational': 1,\n",
-       "         'maintain': 1,\n",
-       "         'improve': 1,\n",
-       "         'graphic': 1,\n",
-       "         'design': 1,\n",
-       "         'brand': 1,\n",
-       "         'assets': 1,\n",
-       "         'promotional': 1,\n",
-       "         'translate': 1,\n",
-       "         'content': 1,\n",
-       "         'outreach': 1,\n",
-       "         'onboard': 1,\n",
-       "         'write': 1,\n",
-       "         'grant': 1,\n",
-       "         'proposals': 1,\n",
-       "         'fundraising': 1,\n",
-       "         'efforts': 1,\n",
-       "         'more': 1,\n",
-       "         'information': 1,\n",
-       "         'about': 1,\n",
-       "         'ways': 1,\n",
-       "         'visit': 1,\n",
-       "         'you’re': 1,\n",
-       "         'unsure': 1,\n",
-       "         'where': 1,\n",
-       "         'start': 1,\n",
-       "         'skills': 1,\n",
-       "         'fit': 1,\n",
-       "         'reach': 1,\n",
-       "         'out!': 1,\n",
-       "         'ask': 1,\n",
-       "         'here': 1,\n",
-       "         'github': 1,\n",
-       "         'opening': 1,\n",
-       "         'leaving': 1,\n",
-       "         'comment': 1,\n",
-       "         'relevant': 1,\n",
-       "         'already': 1,\n",
-       "         'preferred': 1,\n",
-       "         'channels': 1,\n",
-       "         'communication': 1,\n",
-       "         'all': 1,\n",
-       "         'public': 1,\n",
-       "         'but': 1,\n",
-       "         'you’d': 1,\n",
-       "         'like': 1,\n",
-       "         'speak': 1,\n",
-       "         'private': 1,\n",
-       "         'coordinators': 1,\n",
-       "         'at': 1,\n",
-       "         'slack': 1,\n",
-       "         '(write': 1,\n",
-       "         'invitation)': 1,\n",
-       "         'we': 1,\n",
-       "         'have': 1,\n",
-       "         'biweekly': 1,\n",
-       "         'details': 1,\n",
-       "         'which': 1,\n",
-       "         'announced': 1,\n",
-       "         'very': 1,\n",
-       "         'welcome': 1,\n",
-       "         'join': 1,\n",
-       "         'this': 1,\n",
-       "         'guide': 1,\n",
-       "         'helps': 1,\n",
-       "         'explain': 1,\n",
-       "         'why': 1,\n",
-       "         'what': 1,\n",
-       "         'successfully': 1,\n",
-       "         'get': 1,\n",
-       "         'involved': 1})"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -357,7 +135,16 @@
     "\n",
     "print(word_max_appearences,max_appears)\n",
     "\n",
-    "Counter(words)    "
+    "dicto=Counter(words)  \n",
+    "print(dicto)\n",
+    "dicto=dicto.items()\n",
+    "print(dicto)\n",
+    "for elem in dicto:\n",
+    "    key= elem[0]\n",
+    "    datos= elem[1]\n",
+    "    if len(key) >= 4:\n",
+    "        print(f\"La palabra con mas apariciones es : {key} con {datos} apariciones\")\n",
+    "        break\n"
    ]
   }
  ],
