use lambda pero no lo entiendo muy bien

--- a/ejercicio6.ipynb
+++ b/ejercicio6.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tres tristes tigres, tragaban trigo en un trigal, en tres tristes trastos, tragaban trigo tres tristes tigres\n",
+      "tigres\n"
+     ]
+    }
+   ],
    "source": [
     "phrase= input(\"Ingrese una frase: \")\n",
     "phrase= phrase.lower()\n",
@@ -30,25 +39,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['tres', 'tristes', 'tigres,', 'tragaban', 'trigo', 'en', 'un', 'trigal,', 'en', 'tres', 'tristes', 'trastos,', 'tragaban', 'trigo', 'tres', 'tristes', 'tigres']\n"
+     ]
+    }
+   ],
    "source": [
-    "words_list=phrase.split(\" \")\n",
-    "print(words_list)"
+    "phrase=phrase.split(\" \")\n",
+    "print(phrase)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La cantidad de veces ques esta la palbra en la frase es: 0\n"
+     ]
+    }
+   ],
    "source": [
     "count = 0\n",
     "for palabra in words_list:\n",
     "    if word in palabra:\n",
     "        count += 1\n",
     "print(f\"La cantidad de veces ques esta la palbra en la frase es: {count}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cantidad de veces que aparece la palbra en la frase: 2 \n"
+     ]
+    }
+   ],
+   "source": [
+    "word_list= len(list(filter(lambda palabra : word in palabra,phrase))) \n",
+    "print(f\"Cantidad de veces que aparece la palbra en la frase: {word_list} \")"
    ]
   }
  ],
