ejercicio 6 modificado y ejercicio 7 resuelto

--- a/ejercicio6.ipynb
+++ b/ejercicio6.ipynb
@@ -57,20 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La cantidad de veces ques esta la palbra en la frase es: 0\n"
+      "La cantidad de veces ques esta la palbra en la frase es: 2\n"
      ]
     }
    ],
    "source": [
     "count = 0\n",
-    "for palabra in words_list:\n",
+    "for palabra in phrase:\n",
     "    if word in palabra:\n",
     "        count += 1\n",
     "print(f\"La cantidad de veces ques esta la palbra en la frase es: {count}\")\n"
